--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "miniorange/oauth-laravel-free",
   "description": "oauth Package for Laravel webapps.",
-  "license": "miniOrange",
+  "license": "BSD-3-Clause",
   "authors": [
     {
       "name": "miniOrange Security Software Pvt Ltd",
