--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
   "authors": [
     {
       "name": "miniOrange Security Software Pvt Ltd",
-      "email": "info@miniorange.com"
+      "email": "laravelsupport@xecurify.com"
     }
   ],
   "require": {
